--- a/API/package.json
+++ b/API/package.json
@@ -4,5 +4,11 @@
     "express": "^4.18.2",
     "mongodb": "^5.3.0",
     "mongoose": "^7.0.4"
+  },
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon server.js"
   }
 }
