--- a/API/package.json
+++ b/API/package.json
@@ -2,8 +2,9 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongodb": "^5.3.0",
-    "mongoose": "^7.0.4"
+    "mongodb": "4.1",
+    "mongoose": "^7.0.4",
+    "nodemon": "^2.0.22"
   },
   "name": "server",
   "version": "1.0.0",
