--- a/API/package.json
+++ b/API/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "moment": "^2.29.4",
     "mongodb": "4.0",
     "mongoose": "^7.0.4",
     "nodemon": "^2.0.22"
