--- a/API/package.json
+++ b/API/package.json
@@ -3,6 +3,7 @@
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.43",
     "mongodb": "4.0",
     "mongoose": "^7.0.4",
     "nodemon": "^2.0.22"
