--- a/API/package.json
+++ b/API/package.json
@@ -7,7 +7,8 @@
     "moment-timezone": "^0.5.43",
     "mongodb": "4.0",
     "mongoose": "^7.0.4",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "redis": "^4.6.7"
   },
   "name": "server",
   "version": "1.0.0",
